# cluster-boundcorp-homeops

./: .envrc  .gitignore  .sops.yaml  CLAUDE.md  LICENSE  PLAN-nas-migration.md  Taskfile.yaml  restore-pvcs.txt  upload-restore.sh
.github/workflows/: birdweather-ingester-image.yaml  crunchy-postgres-vectorchord-image.yaml
.sops/pubkeys/: cluster.txt
.taskfiles/: AnsibleTasks.yaml  sops.yaml
ai/: .gitignore  JOURNAL.md  PLAN.md  README.md
ai/bench/: README.md  bench.sh  eval.py  llamacpp_proxy.py  sweep.py
ai/bench/big_eval/: big_eval.py
ai/bench/custom_eval/: eval.py  tests.json
ai/bench/octo/: docker-compose.yml
ai/bench/prompts/: mealtracker.txt  routing.txt
ai/bench/results/: rigel-20260410-112312.json  rigel-sweep-20260410-113342.json
ai/bench/rigel/: docker-compose.yml
ansible/inventory/: hosts.yaml
ansible/inventory/host_vars/: enterprise.sops.yaml  iota.sops.yaml  nova.sops.yaml  vega.sops.yaml  ziti.sops.yaml
ansible/playbooks/: cluster-installation.yaml  cluster-list-rook-ceph.yaml  cluster-nuke-rook-ceph.yaml  cluster-prepare.yaml
apps/birdweather-ingester/: Dockerfile  README.md  pyproject.toml
apps/birdweather-ingester/birdweather_ingester/: __init__.py  main.py
apps/birdweather-ingester/tools/: render_card_preview.py
apps/crunchy-postgres-vectorchord/: Dockerfile  README.md
bootstrap/: configure.yaml
bootstrap/vars/: config.sample.yaml
kubernetes/apps/backups/: kustomization.yaml  namespace.yaml  pvc-backup-cronjob.yaml  pvc-leeward-backups.yaml  rclone-config-secret.sops.yaml  (+1 more)
kubernetes/flux/: apps.yaml
(+249 files in other folders)
