[project]
name = "birdweather-ingester"
version = "0.1.0"
description = "Poll BirdWeather detections and PUC sensor readings into PostgreSQL."
requires-python = ">=3.12"
dependencies = [
  "paho-mqtt>=2.1,<3",
  "Pillow>=11,<12",
  "psycopg[binary]>=3.2,<4",
  "requests>=2.32,<3",
]

[project.scripts]
birdweather-ingester = "birdweather_ingester.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
